--- a/landing/css/base.css
+++ b/landing/css/base.css
@@ -1,3 +1,37 @@
+@font-face {
+    font-family: 'mark_proheavy';
+    src: url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.eot');
+    src: url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.woff') format('woff'),
+         url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.ttf') format('truetype'),
+         url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.svg#mark_proheavy') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'mark_probold';
+    src: url('../fonts/markpro/markpro-bold-webfont.eot');
+    src: url('../fonts/markpro/markpro-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/markpro/markpro-bold-webfont.woff') format('woff'),
+         url('../fonts/markpro/markpro-bold-webfont.ttf') format('truetype'),
+         url('../fonts/markpro/markpro-bold-webfont.svg#mark_probold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+  font-family: MarkWebPro-Black;
+  src: url("../fonts/markpro/MarkWebPro-Black.eot");
+  src: url("../fonts/markpro/MarkWebPro-Black.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+    font-family: 'TradeGothicLTPro';src: url('../fonts/tradegothic/2AB61D_2_0.eot');src: url('../fonts/tradegothic/2AB61D_2_0.eot?#iefix') format('embedded-opentype'),url('../fonts/tradegothic/2AB61D_2_0.woff') format('woff'),url('../fonts/tradegothic/2AB61D_2_0.ttf') format('truetype');
+}
+
 *, *:before, *:after {
     box-sizing: border-box;
 }
@@ -16,7 +50,7 @@ h1,h2,h3,h4,h5,p {
 }
 
 body {
-    font-family: Arial,sans-serif;
+    font-family: 'TradeGothicLTPro', Arial,sans-serif;
 }
 
 .cf:before,
@@ -29,29 +63,4 @@ body {
     clear: both;
 }
 
-@font-face {
-    font-family: 'mark_proheavy';
-    src: url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.eot');
-    src: url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.woff') format('woff'),
-         url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.ttf') format('truetype'),
-         url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.svg#mark_proheavy') format('svg');
-    font-weight: normal;
-    font-style: normal;
 
-}
-
-
-
-
-@font-face {
-    font-family: 'mark_probold';
-    src: url('../fonts/markpro/markpro-bold-webfont.eot');
-    src: url('../fonts/markpro/markpro-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/markpro/markpro-bold-webfont.woff') format('woff'),
-         url('../fonts/markpro/markpro-bold-webfont.ttf') format('truetype'),
-         url('../fonts/markpro/markpro-bold-webfont.svg#mark_probold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
