--- a/landing/css/landing.css
+++ b/landing/css/landing.css
@@ -38,6 +38,7 @@
     width: 80%;
     text-align: center;
     font-family: 'mark_proheavy', Arial, sans-serif;
+    /*font-family: MarkWebPro-Black, Arial, sans-serif;*/
     font-size: 3.125em;
     margin: 150px auto 0 auto;
     line-height: 1.2em;
@@ -74,10 +75,10 @@
 .course-logo {
     background-color: white;
     display: inline-block;
-    font-family: 'mark_proheavy', Arial, sans-serif;
+    /*font-family: 'mark_proheavy', Arial, sans-serif;*/
+    font-family: MarkWebPro-Black, Arial, sans-serif;
     color: #4D4D4D;
     text-indent: 30px;
-    line-height: 1.6em;
     white-space: nowrap;
 }
 
@@ -142,15 +143,67 @@
     background: #edc60d;
 }
 
-@media all and (max-width: 560px) {
+#footer {
+    text-align: center;
+    padding: 20px 0;
+}
+
+.legal {
+    font-size: .5em;
+    color: #C5C5C5;
+    letter-spacing: .1em;
+}
+
+.legal a {
+    color: #C5C5C5;
+    text-decoration: underline;
+}
+
+@media all and (max-width: 971px) and (min-width: 560px) {
 
     .site-tagline {
         font-size: 2em;
     }
 
-    #container {
-        max-width: 480px;
+    .course-description {
         width: 100%;
+        margin-top: 35px;
+        font-size: .9em;
+    }
+
+    .course-logo {
+        padding-right: 5px;
+    }
+
+    .course-btn {
+        bottom: 20px;
+    }
+
+    #container {
+        width: 100%;
+    }
+
+    .course-type {
+        display: block;
+        position: absolute;
+        top: 29px;
+    }
+
+}
+
+
+@media all and (max-width: 560px) {
+
+    #container {
+        width: 100%;
+    }
+
+    .course-description {
+        width: 80%;
+    }
+
+    .site-tagline {
+        font-size: 2em;
     }
 
     .course {
@@ -158,8 +211,9 @@
         float: none;
     }
 
-    .course-description {
-        width: 80%;
+    .site-logo {
+        left: 10px;
+        top: 15px;
     }
 
 }
