--- a/landing/css/base.css
+++ b/landing/css/base.css
@@ -1,26 +1,4 @@
 @font-face {
-    font-family: 'mark_proheavy';
-    src: url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.eot');
-    src: url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.woff') format('woff'),
-         url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.ttf') format('truetype'),
-         url('../fonts/markpro/fontfont_ff.mark.pro.heavy-webfont.svg#mark_proheavy') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'mark_probold';
-    src: url('../fonts/markpro/markpro-bold-webfont.eot');
-    src: url('../fonts/markpro/markpro-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/markpro/markpro-bold-webfont.woff') format('woff'),
-         url('../fonts/markpro/markpro-bold-webfont.ttf') format('truetype'),
-         url('../fonts/markpro/markpro-bold-webfont.svg#mark_probold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
   font-family: MarkWebPro-Black;
   src: url("../fonts/markpro/MarkWebPro-Black.eot");
   src: url("../fonts/markpro/MarkWebPro-Black.woff") format("woff");
@@ -33,6 +11,7 @@
 }
 
 *, *:before, *:after {
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -51,6 +30,8 @@ h1,h2,h3,h4,h5,p {
 
 body {
     font-family: 'TradeGothicLTPro', Arial,sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 .cf:before,
@@ -63,4 +44,8 @@ body {
     clear: both;
 }
 
-
+.mp {
+  font-family: MarkWebPro-Black, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
